--- a/src/app/components/title-similary/title-similary.component.html
+++ b/src/app/components/title-similary/title-similary.component.html
@@ -1,8 +1,15 @@
-<div>
+<div class="h-full w-full">
     <div class="border-b-4 my-3 border-blue-500 p-2">
-        <span class="text-2xl text-white bg-blue-700 p-2">Story</span>
+        <span class="text-2xl text-white bg-blue-700 p-2">Similary Movie</span>
     </div>
-    <div class="w-full h-full">
-        <span class="text-white"> asdadasdvsfdav</span>
+    <div class="flex flex-wrap">
+        <app-card-movie class="p-2 w-full sm:w-1/2 md:w-1/3 lg:w-1/4" *ngFor="let lastEpisode of lastEpisodes"
+            idMovie="{{lastEpisode.idMovie}}"
+            title="{{ lastEpisode.title }}" 
+            image="{{ lastEpisode.image }}" 
+            stars="{{ lastEpisode.stars }}"
+            link="{{ lastEpisode.link }}" 
+            status="{{lastEpisode.status}}">
+        </app-card-movie>
     </div>
 </div>
