--- a/src/app/components/title-start/title-start.component.html
+++ b/src/app/components/title-start/title-start.component.html
@@ -1,43 +1,71 @@
 <div class="bg-blue-700 p-7 h-full w-full rounded-lg">
-    <div class="border-b-4 my-3 border-gray-900 p-2">
-        <div class="text-white text-3xl">Name search</div>
-        <div class="flex text-white text-xl mx-3">
-            <div>year * time </div>
-        </div>
+  <div class="border-b-4 my-3 border-gray-900 p-2">
+    <div class="text-white text-3xl">Name search</div>
+    <div class="flex text-white text-xl mx-3">
+      <div>year * time</div>
     </div>
-    <div class="felx">
-        <div class="text-white text-9xl">images......</div>
-        <div class="w-full h-full my-4 flex gap-3">
-            <span class="text-white text-xs border-2 p-2 rounded-full">ACTION</span>
-            <span class="text-white text-xs border-2 p-2 rounded-full">ACTION</span>
-            <span class="text-white text-xs border-2 p-2 rounded-full">ACTION</span>
-        </div>
-        <div class="text-white h-full ">asdsadsaad sdfdfds sdgdfdfdg
-        </div>
-        <div class="flex items-center">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="yellow" viewBox="0 0 24 24" strokeWidth={1.5}
-                stroke="currentColor" class="w-6 h-6">
-                <path strokeLinecap="round" strokeLinejoin="round"
-                    d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z" />
-            </svg>
-            <div class="ml-2 text-white">point/10</div>
-        </div>
-            <div class="border-b-4 my-3 border-gray-900 p-2">
-
-        </div>
-        <div class="w-full h-full">
-                <div class="border-b-4 my-3 border-gray-900 p-2">
-
-                <div class="text-white text-xl"> Director: name</div>
+  </div>
+  <div class="felx">
+    <div>
+      <div class="w-full h-full">
+        <div class="flex justify-center items-center">
+          <div class="relative overflow-hidden">
+            <div
+              class="flex transition-transform duration-300"
+              [ngStyle]="{ transform: 'translateX(-' + currentSlide * 100 + '%)'}">
+              <div *ngFor="let slide of groupSlides; let i = index" class="w-full flex-shrink-0 items-center flex justify-center">
+                <div *ngFor="let image of slide">
+                  <img [src]="image.imageUrl" class="w-96 h-96 object-cover px-2" alt="image 1" />
+                </div>
+              </div>
             </div>
-                <div class="border-b-4 my-3 border-gray-900 p-2">
-
-                <div class="text-white text-xl"> Director: name</div>
-            </div>
-                <div class="border-b-4 my-3 border-gray-900 p-2">
-
-                <div class="text-white text-xl"> Director: name</div>
-            </div>
+            <button
+              (click)="prevSlide()"
+              class="absolute top-1/2 left-0 transform text-7xl -translate-y-1/2 bg-white p-2 rounded-full shadow-lg">
+            &lt;
+            </button>
+            <button
+              (click)="nextSlide()"
+              class="absolute top-1/2 right-0 transform text-7xl -translate-y-1/2 bg-white p-2 rounded-full shadow-lg">
+            &gt;
+            </button>
+          </div>
         </div>
+      </div>
+
+    <div class="w-full h-full my-4 flex gap-3">
+      <span class="text-white text-xs border-2 p-2 rounded-full">ACTION</span>
+      <span class="text-white text-xs border-2 p-2 rounded-full">ACTION</span>
+      <span class="text-white text-xs border-2 p-2 rounded-full">ACTION</span>
     </div>
+    <div class="text-white h-full">asdsadsaad sdfdfds sdgdfdfdg</div>
+    <div class="flex items-center">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="yellow"
+        viewBox="0 0 24 24"
+        strokeWidth="{1.5}"
+        stroke="currentColor"
+        class="w-6 h-6">
+        <path
+          strokeLinecap="round"
+          strokeLinejoin="round"
+          d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z"
+        />
+      </svg>
+      <div class="ml-2 text-white">point/10</div>
+    </div>
+    <div class="border-b-4 my-3 border-gray-900 p-2"></div>
+    <div class="w-full h-full">
+      <div class="border-b-4 my-3 border-gray-900 p-2">
+        <div class="text-white text-xl">Director: name</div>
+      </div>
+      <div class="border-b-4 my-3 border-gray-900 p-2">
+        <div class="text-white text-xl">Director: name</div>
+      </div>
+      <div class="border-b-4 my-3 border-gray-900 p-2">
+        <div class="text-white text-xl">Director: name</div>
+      </div>
+    </div>
+  </div>
 </div>
