--- a/src/app/components/title-start/title-start.component.html
+++ b/src/app/components/title-start/title-start.component.html
@@ -19,16 +19,14 @@
                 </div>
               </div>
             </div>
-            <button
-              (click)="prevSlide()"
-              class="absolute top-1/2 left-0 transform text-7xl -translate-y-1/2 bg-white p-2 rounded-full shadow-lg">
-            &lt;
-            </button>
-            <button
-              (click)="nextSlide()"
-              class="absolute top-1/2 right-0 transform text-7xl -translate-y-1/2 bg-white p-2 rounded-full shadow-lg">
-            &gt;
-            </button>
+            <button (click)="prevSlide()"
+            class="absolute top-1/2 left-0 transform text-7xl -translate-y-1/2 bg-white p-2 rounded-full shadow-lg">
+            ‹
+        </button>
+        <button (click)="nextSlide()"
+            class="absolute top-1/2 right-0 transform text-7xl -translate-y-1/2 bg-white p-2 rounded-full shadow-lg">
+            ›
+        </button>
           </div>
         </div>
       </div>
