--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,10 +9,10 @@
                 <a href="/about" class="hover:underline me-4 md:me-6">About</a>
             </li>
             <li>
-                <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+                <a href="" class="hover:underline me-4 md:me-6">Privacy Policy</a>
             </li>
             <li>
-                <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
+                <a href="" class="hover:underline me-4 md:me-6">Licensing</a>
             </li>
             <li>
                 <a href="/contact" class="hover:underline">Contact</a>
